[package]
name = "debugbunny"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.7", features = ["hex", "base64"] }
sha2 = "0.10"
tokio = { version = "1.37", features = ["full"] }
thiserror = "1"
url = { version = "2", features = ["serde"] }
zstd = "0.13"